# fefu_app/app/Models/User.php
@@ -6,7 +6,9 @@ use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Support\Facades\Hash;
 use Laravel\Sanctum\HasApiTokens;
+
 
 class User extends Authenticatable
 {
@@ -41,4 +43,15 @@ class User extends Authenticatable
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
+
+
+    public static function createFormRequest(array $requestData) : self {
+        $user = new self();
+        $user->name = $requestData['name'];
+        $user->email = $requestData['email'];
+        $user->password = Hash::make($requestData['password']);
+        $user->save();
+
+        return $user;
+    }
 }
